With mutter from main, window drags sometimes don't start, especially with stylus input
When starting a window move/resize by dragging the window titlebar, the drag sometimes doesn't actually happen. This especially happens when using a Stylus to start the drag and with Firefox as the client.
What's happening is that the window drag gets initiated through xdg_toplevel::move as expected, and we start it, but it gets stopped immediately again because a BUTTON_PRESS event comes in and ends the drag (see https://gitlab.gnome.org/GNOME/mutter/-/blob/main/src/compositor/meta-window-drag.c#L1701).
Looks like the reason for this BUTTON_PRESS event happening after the xdg_toplevel::move is the stage event queue: We send the button press and a few move events to wayland clients immediately, triggering xdg_toplevel::move, but Clutter delivers events to the scenegraph (and therefore to the MetaWindowDrag) only on the next stage update. So the window drag op can get started before the BUTTON_PRESS event gets delivered to Clutter actors, and by the time it gets delivered, the MetaWindowDrag is already holding a grab and receives the event.
Not sure why I'm seeing this only with main, I think we should have behaved the same in 45 already.
cc @carlosg